--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "element-ui": "2.7.2",
     "highlight.js": "^9.15.8",
     "js-cookie": "2.2.0",
+    "monaco-editor": "^0.26.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "postcss-pxtorem": "^5.1.1",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
